--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,7 +62,7 @@ body {
 }
 
 .text-muted {
-  @apply text-gray-600;
+  @apply text-gray-700;
 }
 
 .card {
@@ -94,7 +94,7 @@ body {
 }
 
 .table-container {
-  @apply rounded-lg shadow overflow-hidden;
+  @apply rounded-lg shadow overflow-hidden ;
 }
 
 .table-header {
@@ -102,7 +102,7 @@ body {
 }
 
 .table-cell {
-  @apply px-6 py-4 whitespace-nowrap;
+  @apply px-6 py-4 whitespace-nowrap text-gray-800;
 }
 
 .form-label {
@@ -110,7 +110,7 @@ body {
 }
 
 .form-input {
-  @apply w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-green-500 focus:border-green-500;
+  @apply w-full px-3 py-2 border text-gray-800 rounded-md focus:outline-none focus:ring-green-500 focus:border-green-500;
 }
 
 .badge {
