--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,6 +99,10 @@ body {
   @apply w-full px-3 py-2 border text-gray-800 rounded-md focus:outline-none focus:ring-green-500 focus:border-green-500;
 }
 
+.form-select {
+  @apply bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5;
+}
+
 .badge {
   @apply px-2 inline-flex text-xs leading-5 font-semibold rounded-full;
 }
